--- a/index5.html
+++ b/index5.html
@@ -6,7 +6,9 @@
     <title>MY Travel Blog</title>
 </head>
 <body>
+    <!--This is the head-->
     <h1>ami web development hobei in-sa-allah</h1>
     <h2>web development</h2>
+    <p>Lorem ipsum dolor sit amet.</p>
 </body>
 </html>
