code is the third

--- a/index5.html
+++ b/index5.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <!--This is the head-->
-    <h1>ami web development hobei in-sa-allah</h1>
-    <h2>web development</h2>
+    <h1><em>ami web development hobei in-sa-allah</em></h1>
+    <h2> <i>web development</i></h2>
     <p>Lorem ipsum dolor sit amet.</p>
 </body>
 </html>
