pragraph and button is the code

--- a/index5.html
+++ b/index5.html
@@ -10,5 +10,11 @@
     <h1><em>ami web development hobei in-sa-allah</em></h1>
     <h2> <i>web development</i></h2>
     <p>Lorem ipsum dolor sit amet.</p>
+    <div>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi, officiis!</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, error.</p>
+      
+    </div>
+
 </body>
 </html>
