--- a/index5.html
+++ b/index5.html
@@ -15,6 +15,28 @@
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, error.</p>
       
     </div>
+    <button>Read more</button> <br>
+    
+    <span><b>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, </b></span>
+    <br>
+    <span><strong>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt explicabo illo aliquid sit dolores modi?</strong></span>
+<div>
+   <ol>
+    <li>ma</li>
+    <li>baba</li>
+    <li>vai</li>
+    <li>bone</li>
+   </ol> 
+</div>
+<div>
+<ul>
+    <li>bangladesh</li>
+    <li>pakistan</li>
+    <li>india</li>
+</ul>
+
+</div>
+
 
 </body>
 </html>
